--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,10 @@
 ---
+//component imports
+import MainLayout from "../layouts/MainLayout.astro";
 
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Home</h1>
-	</body>
-</html>
+<MainLayout title="Home Page">
+    <p>hi from Home </p>
+    <!-- <h1>I WOULD LOVE IF THIS WOULD SHOW UP</h1> -->
+</MainLayout>
