--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 ---
 
-<MainLayout>
-    <h1>I WOULD LOVE IF THIS WOULD SHOW UP</h1>
+<MainLayout title="About">
+    <p>hi from About</p>
+    <!-- <h1>I WOULD LOVE IF THIS WOULD SHOW UP</h1> -->
 </MainLayout>
